classDiagram
    User <|-- Employer
    User <|-- Applicant
    Profile <|-- ApplicantProfile
    Profile <|-- EmployerProfile
    Post <|-- JobPost
    Post <|-- Announcement
    ApplicantProfile <|-- Preferences


    class User {
        +Long id
        +string username
        +string email
        +string password
        Profile getProfile()
    }

    class Preferences {
        +User user
        +List<Employer> interestedCompanies
        +List<String> interestedIndustries
        +Double minSalary
        +Double maxSalary
        void updatePreferences()

    }


    class Employer {
        +string employerName
        +EmployerProfile employerProfile
        void postJob()
        void viewApplications()
    }

    class Applicant {
        +string applicantName
        +ApplicantProfile applicantProfile
        +Preferences preferences
        void applyForJob(JobPost jobPost)
        void viewAppliedJobs()

    }

    class Profile {
        +User user
        +string name
        +string bio
        void editProfile()
    }

    class EmployerProfile {
        +int employerId
        +string companyDescription
        +int employeeCount
    }

    class ApplicantProfile {
        +int applicantId
        +string resume
        +string bio
    }

    class Post {
        +int id
        +string title
        +string description
    }

    class JobPost {
        +int employerId
        +string requirements
        + String location
        + Double salary

        + Long jobID
        + LocalDateTime postedDate
        + LocalDateTime closedDate

        + List<Applicant> applicants
    }

    class Announcement {
        +int employerId
        +List <User> recipients
    }

    class Application {
        +int id
        +int applicantId
        +int jobPostId
        +Date applicationDeadline
    }


    Applicant --> Application : "applies"
    EmployerProfile --> JobPost : "creates"

